<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_60"
    android:orientation="horizontal">

    <EditText
        android:layout_width="@dimen/width_30"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/number"
        android:inputType="number">
    </EditText>

    <EditText
        android:layout_width="@dimen/width_96"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/player"
        android:inputType="textCapSentences">
    </EditText>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/yellow_card"
        android:theme="@style/CheckboxYellow" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/yellow_card"
        android:theme="@style/CheckboxYellow" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/red_card"
        android:theme="@style/CheckboxRed" />

</LinearLayout>