<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/hockey_toolbar"
        style="@style/Toolbar"
        android:background="@color/hockeyColorDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/hockey"
        app:titleTextColor="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/hockey_toolbar"
        android:background="@drawable/hockey_field"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/alpha_background">
        </FrameLayout>

        <include
            android:id="@+id/id"
            layout="@layout/sport_hockey_countdown_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonGoalTeamA"
            style="@style/Point_button"
            android:background="@drawable/mybuttonhockey"
            android:text="@string/goal"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/buttonGoalTeamB"
            style="@style/Point_button"
            android:background="@drawable/mybuttonhockey"
            android:text="@string/goal"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            style="@style/Team_heading"
            android:text="@string/team_b"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            style="@style/Team_heading"
            android:text="@string/team_a"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/pointsTeamA"
            style="@style/Point_heading"
            android:layout_marginEnd="@dimen/margin_8"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            tools:text="0" />

        <TextView
            android:id="@+id/pointsTeamB"
            style="@style/Point_heading"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            tools:text="0" />

        <TextView
            android:id="@+id/textView10"
            style="@style/Point_heading"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/colon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/minusPointTeamA" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id" />

        <Button
            android:id="@+id/goalsReset"
            style="@style/Reset_button"
            android:layout_marginBottom="@dimen/margin_32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/minusPointTeamA"
            style="@style/Minus_button"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintEnd_toEndOf="@+id/buttonGoalTeamA"
            app:layout_constraintStart_toStartOf="@+id/buttonGoalTeamA"
            app:layout_constraintTop_toBottomOf="@+id/buttonGoalTeamA" />

        <Button
            android:id="@+id/minusPointTeamB"
            style="@style/Minus_button"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintEnd_toEndOf="@+id/buttonGoalTeamB"
            app:layout_constraintStart_toStartOf="@+id/buttonGoalTeamB"
            app:layout_constraintTop_toBottomOf="@+id/buttonGoalTeamB" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</android.widget.RelativeLayout>