<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/cricket_toolbar"
        style="@style/Toolbar"
        android:background="@color/cricketColorDark"
        app:title="@string/cricket"
        app:titleTextColor="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cricket_toolbar"
        android:background="@drawable/cricket_field"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/alpha_background">
        </FrameLayout>

        <Button
            android:id="@+id/button1runTeamA"
            style="@style/Point_button"
            android:background="@drawable/mybuttoncricket"
            android:text="@string/run1"
            app:layout_constraintEnd_toStartOf="@+id/minus1runTeamA"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button4runsTeamA"
            style="@style/Point_button"
            android:background="@drawable/mybuttoncricket"
            android:text="@string/run4"
            app:layout_constraintEnd_toEndOf="@+id/button1runTeamA"
            app:layout_constraintStart_toStartOf="@+id/button1runTeamA"
            app:layout_constraintTop_toBottomOf="@+id/button1runTeamA" />

        <Button
            android:id="@+id/button6runsTeamA"
            style="@style/Point_button"
            android:background="@drawable/mybuttoncricket"
            android:text="@string/run6"
            app:layout_constraintEnd_toEndOf="@+id/button4runsTeamA"
            app:layout_constraintStart_toStartOf="@+id/button4runsTeamA"
            app:layout_constraintTop_toBottomOf="@+id/button4runsTeamA" />

        <Button
            android:id="@+id/button1runTeamB"
            style="@style/Point_button"
            android:background="@drawable/mybuttoncricket"
            android:text="@string/run1"
            app:layout_constraintEnd_toStartOf="@+id/minus1runTeamB"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/button4runsTeamB"
            style="@style/Point_button"
            android:background="@drawable/mybuttoncricket"
            android:text="@string/run4"
            app:layout_constraintEnd_toEndOf="@+id/button1runTeamB"
            app:layout_constraintStart_toStartOf="@+id/button1runTeamB"
            app:layout_constraintTop_toBottomOf="@+id/button1runTeamB" />

        <Button
            android:id="@+id/button6runsTeamB"
            style="@style/Point_button"
            android:background="@drawable/mybuttoncricket"
            android:text="@string/run6"
            app:layout_constraintEnd_toEndOf="@+id/button4runsTeamB"
            app:layout_constraintStart_toStartOf="@+id/button4runsTeamB"
            app:layout_constraintTop_toBottomOf="@+id/button4runsTeamB" />

        <TextView
            android:id="@+id/textView5"
            style="@style/Team_heading"
            android:text="@string/team_b"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />


        <TextView
            android:id="@+id/textView4"
            style="@style/Team_heading"
            android:text="@string/team_a"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="0.15" />

        <TextView
            android:id="@+id/pointsTeamA"
            style="@style/Point_heading"
            android:layout_marginEnd="@dimen/margin_8"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            tools:text="0" />

        <TextView
            android:id="@+id/pointsTeamB"
            style="@style/Point_heading"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            tools:text="0" />

        <TextView
            android:id="@+id/textView10"
            style="@style/Point_heading"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/colon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button6runsTeamA" />

        <Button
            android:id="@+id/pointsReset"
            style="@style/Reset_button"
            android:layout_marginBottom="@dimen/margin_32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/minus1runTeamA"
            style="@style/Minus_button"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/button1runTeamA"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/button1runTeamA"
            app:layout_constraintTop_toTopOf="@+id/button1runTeamA" />

        <Button
            android:id="@+id/minus4runsTeamA"
            style="@style/Minus_button"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintBottom_toBottomOf="@+id/button4runsTeamA"
            app:layout_constraintStart_toEndOf="@+id/button4runsTeamA"
            app:layout_constraintTop_toTopOf="@+id/button4runsTeamA" />

        <Button
            android:id="@+id/minus6runsTeamA"
            style="@style/Minus_button"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintBottom_toBottomOf="@+id/button6runsTeamA"
            app:layout_constraintStart_toEndOf="@+id/button6runsTeamA"
            app:layout_constraintTop_toTopOf="@+id/button6runsTeamA" />

        <Button
            android:id="@+id/minus1runTeamB"
            style="@style/Minus_button"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/button1runTeamB"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/button1runTeamB"
            app:layout_constraintTop_toTopOf="@+id/button1runTeamB" />

        <Button
            android:id="@+id/minus4runsTeamB"
            style="@style/Minus_button"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintBottom_toBottomOf="@+id/button4runsTeamB"
            app:layout_constraintStart_toEndOf="@+id/button4runsTeamB"
            app:layout_constraintTop_toTopOf="@+id/button4runsTeamB" />

        <Button
            android:id="@+id/minus6runsTeamB"
            style="@style/Minus_button"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintBottom_toBottomOf="@+id/button6runsTeamB"
            app:layout_constraintStart_toEndOf="@+id/button6runsTeamB"
            app:layout_constraintTop_toTopOf="@+id/button6runsTeamB" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</android.widget.RelativeLayout>